--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
     					<span class="date">2020-2024</span>
     					<h2>Bachelor of Engineering</h2>
     					<span class="position">Rajkiya Engineering College Azamagrh</span>
-    					<p class="mt-4">CGPA: 7.5</p>
+    					<p class="mt-4">CGPA: 7.4</p>
     				</div>
     			</div>
 
@@ -407,11 +407,11 @@
         <div class="row d-flex">
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/rishabhnmishra/SQL_Music_Store_Analysis/blob/main/Music_Store_Query.sql" class="block-20 zoom-effect" style="background-image: url('images/proj-1.png');">
+              <a href="https://github.com/AnkitKumardesign/Catia-v5-Design/blob/main/Two%20Stroke%20Engine.png" class="block-20 zoom-effect" style="background-image: url('images/proj-1.png');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/SQL_Music_Store_Analysis/blob/main/Music_Store_Query.sql">Design Of Two Stroke Engine</a></h3>
+                <h3 class="heading"><a href="https://github.com/AnkitKumardesign/Catia-v5-Design/blob/main/Two%20Stroke%20Engine.png">Design Of Two Stroke Engine</a></h3>
                 <p>Two-stroke engines are often found in smaller, lower power engines such as scooters, dirt bikes, jet skis, smaller outboard
 					motors, and lawn equipment.</p>
               </div>
@@ -419,22 +419,22 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/rishabhnmishra/Python_Diwali_Sales_Analysis/blob/main/Diwali_Sales_Analysis.ipynb" class="block-20 zoom-effect" style="background-image: url('images/proj-2.png');">
+              <a href="https://github.com/AnkitKumardesign/Catia-v5-Design/blob/main/Valve%20Assembly.png" class="block-20 zoom-effect" style="background-image: url('images/proj-2.png');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/Python_Diwali_Sales_Analysis/blob/main/Diwali_Sales_Analysis.ipynb">Valve Assembly</a></h3>
+                <h3 class="heading"><a href="https://github.com/AnkitKumardesign/Catia-v5-Design/blob/main/Valve%20Assembly.png">Valve Assembly</a></h3>
                 <p>A valve assembly is the final stage of the manufacturing process that combines all the parts and components of a valve to make it a product.</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg" class="block-20 zoom-effect" style="background-image: url('images/proj-3.png');">
+              <a href="hhttps://github.com/AnkitKumardesign/Catia-v5-Design/blob/main/JCB%20Assembly.png" class="block-20 zoom-effect" style="background-image: url('images/proj-3.png');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg">JCB Machine Assembly</a></h3>
+                <h3 class="heading"><a href="hhttps://github.com/AnkitKumardesign/Catia-v5-Design/blob/main/JCB%20Assembly.png">JCB Machine Assembly</a></h3>
                 <p>CATIA V5 | JCB RUBBER TYRE DESIGN | FOR BEGINNERS: This video covers JCB Tyre modeling, including sketcher, shaft, and groove definition commands in part design</p>
               </div>
             </div>
@@ -445,22 +445,22 @@
 		<div class="row d-flex justify-content-center">  
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/rishabhnmishra/sales_forecasting/tree/main" class="block-20 zoom-effect" style="background-image: url('images/proj-4.png');">
+				<a href="https://github.com/AnkitKumardesign/Catia-v5-Design/blob/main/Screw%20Jack.png" class="block-20 zoom-effect" style="background-image: url('images/proj-4.png');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://github.com/rishabhnmishra/sales_forecasting/tree/main">Screw Jack</a></h3>
+				  <h3 class="heading"><a href="https://github.com/AnkitKumardesign/Catia-v5-Design/blob/main/Screw%20Jack.png">Screw Jack</a></h3>
 				  <p>A screw jack assembly is a gearbox assembly that uses a motor to convert rotary motion into linear motion. It's a combination of a screw and a gearbox, and has three types of configurations that can be adapted to different requirements. </p>
 				</div>
 			  </div>
 			</div>
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/rishabhnmishra/customer_segmentation/blob/main/Customer_Segmentation-final.ipynb" class="block-20 zoom-effect" style="background-image: url('images/proj-5.png');">
+				<a href="https://github.com/AnkitKumardesign/Catia-v5-Design/blob/main/Screw.png" class="block-20 zoom-effect" style="background-image: url('images/proj-5.png');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://github.com/rishabhnmishra/customer_segmentation/blob/main/Customer_Segmentation-final.ipynb">Screw Design</a></h3>
+				  <h3 class="heading"><a href="https://github.com/AnkitKumardesign/Catia-v5-Design/blob/main/Screw.png">Screw Design</a></h3>
 				  <p>Draw a hexagon and make sure that dashed line coincides with horizontal or vertical axis.After that use Constraints (use dimensions that you need)</p>
 				</div>
 			  </div>
