--- a/index.html
+++ b/index.html
@@ -430,11 +430,11 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href="hhttps://github.com/AnkitKumardesign/Catia-v5-Design/blob/main/JCB%20Assembly.png" class="block-20 zoom-effect" style="background-image: url('images/proj-3.png');">
+              <a href="https://github.com/AnkitKumardesign/Catia-v5-Design/blob/main/JCB%20Assembly.png" class="block-20 zoom-effect" style="background-image: url('images/proj-3.png');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="hhttps://github.com/AnkitKumardesign/Catia-v5-Design/blob/main/JCB%20Assembly.png">JCB Machine Assembly</a></h3>
+                <h3 class="heading"><a href="https://github.com/AnkitKumardesign/Catia-v5-Design/blob/main/JCB%20Assembly.png">JCB Machine Assembly</a></h3>
                 <p>CATIA V5 | JCB RUBBER TYRE DESIGN | FOR BEGINNERS: This video covers JCB Tyre modeling, including sketcher, shaft, and groove definition commands in part design</p>
               </div>
             </div>
