--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
           			<span class="icon-map-signs"></span>
           		</div>
           		<h3 class="mb-4">Address</h3>
-	            <p>Sitapur, Uttar Pradesh</p>
+	            <p> <a href="https://www.google.com/search?q=sitapur&rlz=1C1FKPE_enIN1077IN1077&oq=Sitapur&gs_lcrp=EgZjaHJvbWUqDQgAEAAY4wIYsQMYgAQyDQgAEAAY4wIYsQMYgAQyCggBEC4YsQMYgAQyCggCEAAYsQMYgAQyBwgDEAAYgAQyEAgEEC4YgwEYsQMYgAQYigUyDQgFEAAYgwEYsQMYgAQyBwgGEAAYgAQyBwgHEAAYgAQyBwgIEAAYgAQyEAgJEC4YrwEYxwEYgAQYjgXSAQg0NzE3ajBqN6gCCLACAQ&sourceid=chrome&ie=UTF-8">Sitapur, Uttar Pradesh</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
